--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_dotenv: ^5.1.0
   http: ^1.1.0
   animated_text_kit: ^4.2.2
+  flutter_svg: ^2.0.9
+  lottie: ^2.7.0
+  font_awesome_flutter: ^10.6.0
 
 dev_dependencies:
   flutter_test:
